welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: reassignment to val
        k=k+1
         ^