welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var n=0
  var k=0
  
  for (k<-0 to nums.length -2){
    if (nums(k)==6){
      if (nums(k+1)==6){
        n=n+1
      }
      else if (nums(k+1)==7){
        k=k+1
      }
    }
  }
  return n;return k
}
                                      